// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupSidebar renders correctly 1`] = `
<DocumentFragment>
  <div
    data-stylename="group-sidebar"
  >
    <div
      data-stylename="about-section"
    >
      <div
        data-stylename="about-content"
      >
        <span>
          <h2>
            Group Description
          </h2>
          <span>
            <p>
              the description, which is long enough to add a "Read More" button, the description, which is long enough to add a "Read More" button, the description, which is long enough to add a "Read More" button, the description, which is long enough to add a "Read More" button, the description, which is long enough to add a "Read More" button, 
            </p>
            

          </span>
        </span>
      </div>
    </div>
    <div
      data-stylename="member-section"
    >
      <a
        data-stylename="members-link"
        href="/groups/great-cause/members"
      >
        <div
          data-stylename="header"
        >
          Members
        </div>
        <div
          data-stylename="images-and-count"
        >
          <div
            data-stylename="image-row"
          >
            <div
              data-stylename="image overlaps medium"
            />
            <div
              data-stylename="image overlaps medium"
            />
            <div
              data-stylename="image overlaps medium"
            />
          </div>
          <span
            data-stylename="members-total"
          >
            +53
          </span>
        </div>
      </a>
    </div>
    <div
      data-stylename="leader-section"
    >
      <div
        data-stylename="header leader-header"
      >
        Group {{locationDescriptor}}
      </div>
      <div
        data-stylename="leader"
      >
        <a
          href="/groups/great-cause/members/4"
        >
          <div
            data-stylename="image medium"
          />
        </a>
        <a
          data-stylename="leader-name"
          href="/groups/great-cause/members/4"
        />
        <div
          data-stylename="badges"
        />
      </div>
      <div
        data-stylename="leader"
      >
        <a
          href="/groups/great-cause/members/5"
        >
          <div
            data-stylename="image medium"
          />
        </a>
        <a
          data-stylename="leader-name"
          href="/groups/great-cause/members/5"
        />
        <div
          data-stylename="badges"
        />
      </div>
      <div
        data-stylename="leader"
      >
        <a
          href="/groups/great-cause/members/6"
        >
          <div
            data-stylename="image medium"
          />
        </a>
        <a
          data-stylename="leader-name"
          href="/groups/great-cause/members/6"
        />
        <div
          data-stylename="badges"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MemberSection Doesn't show total if it's < 1 1`] = `
<div
  data-stylename="member-section"
>
  <Link
    data-stylename="members-link"
    to="/groups/foo/members"
  >
    <div
      data-stylename="header"
    >
      Members
    </div>
    <div
      data-stylename="images-and-count"
    >
      <RoundImageRow
        data-stylename="image-row"
        imageUrls={
          Array [
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1150.jpg?26029",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1099.jpg?68045",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/439.jpg?10715",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/501.jpg?36352",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/178.jpg?42174",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/749.jpg?66249",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/414.jpg?52422",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/369.jpg?90195",
          ]
        }
      />
    </div>
  </Link>
</div>
`;

exports[`MemberSection Formats total correctly if it's > 999 1`] = `
<div
  data-stylename="member-section"
>
  <Link
    data-stylename="members-link"
    to="/groups/foo/members"
  >
    <div
      data-stylename="header"
    >
      Members
    </div>
    <div
      data-stylename="images-and-count"
    >
      <RoundImageRow
        data-stylename="image-row"
        imageUrls={
          Array [
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1150.jpg?26029",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1099.jpg?68045",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/439.jpg?10715",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/501.jpg?36352",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/178.jpg?42174",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/749.jpg?66249",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/414.jpg?52422",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/369.jpg?90195",
          ]
        }
      />
      <span
        data-stylename="members-total"
      >
        +5.6k
      </span>
    </div>
  </Link>
</div>
`;

exports[`MemberSection Shows invite link if has responsibility ADD_MEMBERS is true 1`] = `
<div
  data-stylename="member-section"
>
  <Link
    data-stylename="members-link"
    to="/groups/foo/members"
  >
    <div
      data-stylename="header"
    >
      Members
    </div>
    <div
      data-stylename="images-and-count"
    >
      <RoundImageRow
        data-stylename="image-row"
        imageUrls={
          Array [
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1150.jpg?26029",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1099.jpg?68045",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/439.jpg?10715",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/501.jpg?36352",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/178.jpg?42174",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/749.jpg?66249",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/414.jpg?52422",
            "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/369.jpg?90195",
          ]
        }
      />
      <span
        data-stylename="members-total"
      >
        +5.6k
      </span>
    </div>
  </Link>
</div>
`;
